# E2E_RAG_FT

./: .env.example  .gitignore  pyproject.toml
jobs/: instructions.md  qdrant.md
jobs/scripts/finetuning/: finetune_qwen3_embedding.sh  finetune_qwen3_embedding_all.sh  finetune_qwen3_embedding_context.sh  finetune_qwen3_embedding_context_all.sh  finetune_qwen3_generative.sh  finetune_qwen3_generative_all.sh  finetune_qwen3_generative_qa.sh  finetune_qwen3_generative_qa_all.sh
jobs/scripts/santos_dumont/: download_tiktoken_encodings.sh  run_finetune_embedding_context_bioasq_2k_h100.sh  run_finetune_embedding_context_h100.sh  run_finetune_generative_h100.sh  run_finetune_generative_qa_h100.sh  run_hyde_experiment_h100.sh  run_ict_h100.sh  run_mteb_context_retrieval_h100.sh  run_mteb_context_retrieval_title_bioasq_k12_notrunc_h100.sh  run_mteb_context_retrieval_title_h100.sh  run_mteb_experiment_h100.sh  run_mteb_experiment_title_h100.sh  run_q2d_experiment_h100.sh  run_qdrant.sh  run_rag_experiment_h100.sh  run_rag_experiment_title_h100.sh  run_rag_reference_metrics_semantic_h100.sh  run_rag_reference_metrics_traditional.sh  run_ragas_eval.sh  run_ragas_h100.sh  run_rfg_experiment_h100.sh  run_vllm_embedding_server_h100.sh  run_vllm_servers_h100.sh
jobs/scripts/vllm/: serve_embedding_4b.sh  serve_vl_embedding_4b.sh
notebooks/embeddings/: test_qwen3_embedding.ipynb
scripts/: README.md  create_bioasq_rag_dataset.py  create_qasper_rag_dataset.py  create_telco_dpr_rag_dataset.py  download_hf.py
scripts/create_dataset/: create_bioasq_rag_dataset.py  create_narrativeqa_rag_dataset.py  create_qasper_rag_strict_dataset.py  resplit_bioasq_rag_dataset.py
scripts/embeddings/: index_bioasq_corpus.py  index_narrativeqa_corpus.py  index_qasper_corpus.py  index_telco_dpr_corpus.py  test_qwen3_embedding.py
scripts/evaluation/: README.md
scripts/evaluation/mteb/: run_mteb_context_retrieval.py  run_mteb_context_retrieval_title.py  run_mteb_experiment.py  run_mteb_experiment_title.py  run_mteb_retrieval.py
scripts/evaluation/ragas/: README.md  run_rag_ragas_evaluation.py  run_rag_reference_metrics_semantic.py  run_rag_reference_metrics_traditional.py
scripts/finetuning/embeddings/: README.md  (+3 more)
scripts/generation/: README.md  run_all_rag_generation.sh  run_rag_experiment.py  run_rag_generation.py
scripts/query_expansion/: README.md  run_rfg_experiment.py  run_rfg_generate_expansion.py  run_rfg_stage1_retrieval.py  run_rfg_stage2_mteb.py
scripts/retrieval/: README.md  push_retrieved_docs_to_hub.py  retrieve_rag_top_k.py  retrieve_rag_top_k_inmemory.py  retrieve_rag_top_k_inmemory_title.py  run_all_inmemory_retrieval.sh
src/tesis_unicamp/: __init__.py
(+652 files in other folders)
