[project]
name = "tesis-unicamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ronaldinho Vega Centeno Olivera", email = "dinho15971@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.0",
    "huggingface-hub>=0.26.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
